feat: refactor mapper